fixed the bug regrading visibility of the buttons on small height phones

--- a/src/Components/Layout/Layout.scss
+++ b/src/Components/Layout/Layout.scss
@@ -30,10 +30,14 @@
 
     }
   }
+
   footer {
     position: absolute;
     bottom: 0;
     width: 100%;
+    @media (max-height: 600px) {
+      position: relative;
+    }
   }
 }
 
